<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abitcreative.myprojectlist.ProjectLIstActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_projects" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/popularMovies"
        style="@style/projectButton"
        android:text="@string/popular_movies" />

    <android.support.v7.widget.AppCompatButton
        style="@style/projectButton"
        android:text="@string/stock_hawk" />


    <android.support.v7.widget.AppCompatButton
        style="@style/projectButton"
        android:text="@string/build_it_bigger" />

    <android.support.v7.widget.AppCompatButton
        style="@style/projectButton"
        android:text="@string/make_your_app_material" />

    <android.support.v7.widget.AppCompatButton
        style="@style/projectButton"
        android:text="@string/go_uibquitous" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/projectButton.capstone"
        android:text="@string/capstone" />
</LinearLayout>
